# minic-lsp

./: .gitignore  Makefile  README.md  defs.h  err_codes.h  io.c  io.h  lsp.c  lsp.h  main.c  meson.build  minic.c  minic.h  minic.l  minic.y  semantic.l  symtab.c  symtab.h  test-ok3.mc  test-ok4.mc  test-ok5.mc  test-semerr2.mc  test-synerr1.mc
test/: test-ok1.mc  test-ok2.mc  test-sanity.mc  test-semerr1.mc
